Add Java release variants