@@ -23,7 +23,7 @@ final class LineSessionInvocationTest {
         arguments.add("--ignored");
 
         assertEquals(1, invocation.arguments().size());
-        assertEquals("repl", invocation.arguments().getFirst());
+        assertEquals("repl", invocation.arguments().get(0));
     }
 
     @Test
@@ -40,7 +40,7 @@ final class LineSessionInvocationTest {
                 .terminal(TerminalPolicy.REQUIRED)
                 .build();
 
-        assertEquals("repl", invocation.arguments().getFirst());
+        assertEquals("repl", invocation.arguments().get(0));
         assertEquals(workingDirectory, invocation.workingDirectory().orElseThrow());
         assertEquals("dumb", invocation.environment().get("TERM"));
         assertEquals(shutdownPolicy, invocation.shutdownPolicy().orElseThrow());
